# maldi-tools

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  environment.yml  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: build.yml  ci.yml  test.yml
files/: template.json
src/maldi_tools/: __init__.py  extraction.py  load_maldi_data.py  plotting.py
templates/: core-cropping.ipynb  maldi-load.ipynb  maldi-pipeline.ipynb
tests/: __init__.py  extraction_test.py  plotting_test.py
