[tool.poetry]
name = "maldi-tools"
version = "0.1.0"
description = ""
authors = ["Sricharan Reddy Varra <srivarra@stanford.edu>"]
readme = "README.md"
packages = [{ include = "maldi_tools", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
xarray = "^2023.2.0"
pandas = "^1.5.3"
pyimzml = "^1.5.3"
scipy = "^1.10.1"
scikit-image = "^0.20.0"
tqdm = "^4.65.0"
alpineer = "^0.1.5"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.2"
black = "^23.1.0"
isort = "^5.12.0"
ruff = "^0.0.257"
mypy = "^1.1.1"
ipywidgets = "^8.0.5"
icecream = "^2.1.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-cases = "^3.6.14"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-pycodestyle = "^2.3.1"
pytest-randomly = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
target-version = ['py310']
include = '\.pyi?$'
preview = true

[tool.isort]
py_version = 310
line_length = 110
profile = "black"
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true


## COVERAGE ##

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["maldi_tools"]

[tool.coverage.report]
exclude_lines = [
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
]

show_missing = true
ignore_errors = false
fail_under = 0
omit = ["**/*test*.py"]

## TESTING ##

[tool.pytest.ini_options]
addopts = ["-vv", "-s", "--cov", "--pycodestyle", "--cov-report=lcov"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
testpaths = ["tests"]
norecursedirs = ["tests/utilities"]
